# Spacemouse-Test

./: .gitignore  README.md  pyproject.toml  spacemouse_test.py
udev/: 99-3dconnexion-spacemouse.rules
